move scroll bar to page-wrapper instead of body, no longer covers up toolbar

--- a/Project_Beachworm/frontend/src/App.css
+++ b/Project_Beachworm/frontend/src/App.css
@@ -3,4 +3,10 @@
   color: #fff;
   justify-content: center;
   align-items: flex;
+  height: 100%;
+}
+
+.page-wrapper {
+  height: 100%;
+  overflow-y: auto;
 }
